BB-6858: Update sidebar expand/collapse button according to design - fix sidebar top offset on desktop

--- a/src/Oro/Bundle/ProductBundle/Resources/public/css/grid-sidebar.less
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/css/grid-sidebar.less
@@ -5,7 +5,7 @@
 
 .grid-sidebar {
   position: absolute;
-  top: 11px;
+  top: 0;
   padding: 0;
   height: 100%;
   background-color: #efefef;
