--- a/src/Oro/Bundle/ProductBundle/Resources/public/css/style.less
+++ b/src/Oro/Bundle/ProductBundle/Resources/public/css/style.less
@@ -103,6 +103,10 @@
       margin-right: 0;
     }
   }
+
+  .grid-sidebar {
+    top: 11px;
+  }
 }
 
 .row-oro {
